common/header-echo/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: header-echo
  namespace: header-echo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - test.nokiy.net
      secretName: header-echo-tls
  rules:
    - host: test.nokiy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: header-echo
                port:
                  name: http
